--- a/src/app/components/SelectedDateModal.module.scss
+++ b/src/app/components/SelectedDateModal.module.scss
@@ -39,7 +39,13 @@
         .colorLabel {
           width: 6px;
           height: 30px;
-          background-color: $category_work;
+          background-color: $main;
+          border-radius: 2px;
+        }
+        .colorLabel_free {
+          width: 6px;
+          height: 30px;
+          background-color: $accent;
           border-radius: 2px;
         }
         .timeContainer {
@@ -58,6 +64,11 @@
         }
         h3 {
           font-size: 1.6em;
+        }
+
+        //空き時間の部分のスタイル----------------------
+        .freeTimeTtl {
+          color: $accent;
         }
       }
       .notEvent {
