ドロップシャドウ　edit

--- a/src/app/components/futter.module.scss
+++ b/src/app/components/futter.module.scss
@@ -5,7 +5,7 @@
   padding: 10px 20px;
   background-color: #fdfdfe;
   color: white;
-  box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: inset 0px 0px 1px 0px #e6e2f3;
 
   &__button {
     background: none;
