--- a/src/app/components/AddEventButton.module.scss
+++ b/src/app/components/AddEventButton.module.scss
@@ -1,5 +1,5 @@
-@import "../styles/color.scss";
-
+// @import "../styles/color.scss";
+@use "../styles/color" as *;
 // .addBtnContainer {
 //   position: absolute;
 //   top: 0;
