--- a/src/app/components/AddEventButton.module.scss
+++ b/src/app/components/AddEventButton.module.scss
@@ -32,10 +32,10 @@
 
 .addBtn {
   position: fixed;
-  // top: 78vh;
-  // right: 30vw;
-  right: 18px;
-  bottom: 90px;
+  top: 78vh;
+  right: 6vw;
+  // right: 18px;
+  // bottom: 90px;
 
   width: 50px;
   height: 50px;
